Refactoring of styles

--- a/FRONTEND/src/components/atoms/Input/Input.module.scss
+++ b/FRONTEND/src/components/atoms/Input/Input.module.scss
@@ -5,10 +5,11 @@
   align-items: center;
   width: 100%;
 }
+
 .input {
   width: 90%;
-  margin: 20px 0 15px;
-  height: 25px;
+  margin: 22px 0 0;
+  height: 35px;
   border-radius: 10px;
   padding-left: 10px;
   border: none;
@@ -19,7 +20,7 @@
 
   &:focus+label,
   &:not(:placeholder-shown)+label {
-    transform: translate(-5px, -23px) scale(0.8);
+    transform: translate(-5px, -28px) scale(0.8);
   }
 
   &::placeholder {
@@ -29,8 +30,9 @@
 
 .label {
   position: absolute;
-  top: 23px;
+  top: 28px;
   left: 7%;
+  font-size: 1.1rem;
   font-weight: 700;
   transform-origin: 0.0;
   transition: transform 0.3s;
@@ -38,6 +40,8 @@
 
 .errorInfo {
   position: absolute;
-  bottom: 0;
+  top: 4px;
   font-size: 0.8rem;
+  font-weight: 700;
+  color: orange;
 }
