--- a/FRONTEND/src/components/organisms/BooksList/BooksList.module.scss
+++ b/FRONTEND/src/components/organisms/BooksList/BooksList.module.scss
@@ -1,21 +1,36 @@
+.listWrapper {
+  overflow: hidden;
+  border-radius: 10px;
+}
+
 .bookList {
   width: 100%;
   background-color: #ddd;
 }
 
-.bookItem {
+.bookItem,
+.bookItemHeader {
   display: grid;
-  grid-template-columns: 1fr 1fr auto auto  1fr;
+  grid-template-columns: 1fr 1fr auto auto 1fr;
 }
 
-.bookDate{
+.bookItemHeader {
+  background-color: #777;
+  font-weight: 700;
+  padding: 10px 0 10px 10px;
+}
+
+.bookDate {
+  width: 100px;
+  text-align: center;
+  margin-right: 20px;
+}
+
+.bookAvailability {
   width: 100px;
   text-align: center;
 }
-.bookAvailability{
-  width: 100px;
-  text-align: center;
-}
+
 .bookBtns {
   display: flex;
   justify-content: center;
@@ -24,5 +39,6 @@
 .btn {
   width: 100px;
   margin: 0 10px;
-  border-radius: 10px ;
+  border-radius: 10px;
+
 }
