--- a/FRONTEND/src/App.css
+++ b/FRONTEND/src/App.css
@@ -4,6 +4,9 @@
   box-sizing: border-box;
   font-family: 'Montserrat', sans-serif;
 }
+body{
+  background: linear-gradient(90deg, rgba(51,51,51,1) 1000%, rgba(68,68,68,1) 50%, rgba(85,85,85,1) 0%);
+}
 
 input:-webkit-autofill,
 input:-webkit-autofill:hover, 
@@ -14,7 +17,6 @@ textarea:-webkit-autofill:focus,
 select:-webkit-autofill,
 select:-webkit-autofill:hover,
 select:-webkit-autofill:focus {
-  /* border: 1px solid #FFF; */
   -webkit-text-fill-color: #FFF;
   -webkit-box-shadow: 0 0 0px 1000px rgba(#000000, 0.5) inset;
   transition: background-color 5000s ease-in-out 0s;
