--- a/FRONTEND/src/components/atoms/Button/Button.module.scss
+++ b/FRONTEND/src/components/atoms/Button/Button.module.scss
@@ -1,10 +1,23 @@
 .btn {
-  width: 20%;
-  min-width: 150px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-width: 125px;
   height: 30px;
   margin: 10px;
+  padding: 0 10px;
+  border: 3px solid rgba(#000000, 0.5);
   border-radius: 10px;
-  background-color: green;
-  border: 3px solid rgba($color: #000000, $alpha: 0.2);
-  cursor:  pointer;
+  font-weight: 700;
+  color: black;
+  text-decoration: none;
+  background-color: #2daaff;
+  outline: none;
+  cursor: pointer;
+
+  &:focus,
+  &:hover {
+    background-color: #1e8ad1;
+    border: 3px solid rgba(#000000, 0.8);
+  }
 }
