--- a/FRONTEND/src/components/atoms/SearchBookInput/SearchBookInput.module.scss
+++ b/FRONTEND/src/components/atoms/SearchBookInput/SearchBookInput.module.scss
@@ -3,7 +3,7 @@
   width: 100%;
   justify-content: center;
   border-radius: 15px;
-  margin: 0 auto;
+  margin: 5px auto;
 }
 
 
@@ -12,18 +12,33 @@
   justify-content: center;
   width: 50%;
   height: 30px;
+  border: none;
+  padding-left: 15px;
   border-top-left-radius: 15px;
   border-bottom-left-radius: 15px;
-  border: 0;
-  // margin: 0 auto;
+  color: white;
+  background-color: rgba($color: #000000, $alpha: 0.4);
+  outline: none;
+
+  &:focus {
+    background-color: rgba($color: #000000, $alpha: 0.7);
+  }
 }
 
 .btn {
   border: 0;
   height: 30px;
-  padding: 0 5px;
-  background-color: white;
+  padding: 0 10px;
   border-top-right-radius: 15px;
   border-bottom-right-radius: 15px;
+  font-weight: 700;
+  background-color: rgba(#2daaff, 1.0);
   cursor: pointer;
+  outline: none;
+
+  &:hover,
+  &:focus {
+    background-color: rgba(#2daaff, 0.75);
+    color: white;
+  }
 }
