--- a/FRONTEND/src/components/molecules/Navigation/Navigation.module.scss
+++ b/FRONTEND/src/components/molecules/Navigation/Navigation.module.scss
@@ -1,6 +1,6 @@
 .navMenuWrapper {
-display: flex;
-justify-content: center;
+  display: flex;
+  justify-content: center;
 }
 
 .navMenuList {
@@ -13,11 +13,12 @@ justify-content: center;
   align-items: center;
   color: white;
   text-decoration: none;
-  width: 100px;
+  width: 125px;
   height: 25px;
-  background-color: orange;
+  background-color: rgba(#2daaff, 0.5);
+  border: 3px solid rgba(#2daaff, 1);
   border-radius: 12.5px;
-  margin: 0 20px;
+  margin: 0 10px;
 }
 
 .inactive {
@@ -26,9 +27,10 @@ justify-content: center;
   align-items: center;
   color: white;
   text-decoration: none;
-  width: 100px;
+  width: 125px;
   height: 25px;
-  background-color: #ddd;
+  background-color: rgba(#2daaff, 1.0);
+  color: black;
   border-radius: 12.5px;
-  margin: 0 20px;
+  margin: 0 10px;
 }
