--- a/FRONTEND/src/components/molecules/UserBook/UserBook.module.scss
+++ b/FRONTEND/src/components/molecules/UserBook/UserBook.module.scss
@@ -1,8 +1,14 @@
 .bookItem {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  padding: 10px 0 10px 10px;
+
+  &:nth-of-type(2n-1) {
+    background-color: #bbb;
+  }
 }
 
-.bookTitle, .bookAuthor, .bookDate, .bookStatus {
+.bookDate,
+.bookStatus {
   text-align: center;
 }
