--- a/FRONTEND/src/components/organisms/ArticlesList/ArticlesList.module.scss
+++ b/FRONTEND/src/components/organisms/ArticlesList/ArticlesList.module.scss
@@ -3,3 +3,15 @@
   flex-direction: column;
   align-items: center;
 }
+
+article {
+  width: 50%;
+}
+
+article:nth-of-type(2n-1) {
+  align-self: flex-start;
+}
+
+article:nth-of-type(2n) {
+  align-self: flex-end;
+}
