--- a/FRONTEND/src/components/organisms/Header/Header.module.scss
+++ b/FRONTEND/src/components/organisms/Header/Header.module.scss
@@ -1,11 +1,31 @@
 .header {
   width: 100%;
-  height: 100px;
+  height: 85px;
   background-color: #333;
 }
 
 .internalWrapper {
   width: 1440px;
   margin: 0 auto;
+  padding-top: 5px;
 }
 
+.pageTitle {
+  padding: 0 5px;
+  border-radius: 42.5px;
+  cursor: pointer;
+  text-decoration: none;
+  color: black;
+
+  &:focus,
+  &:hover {
+    background-color: rgba(#000000, 0.2);
+
+  }
+}
+
+.haederBar {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
