--- a/FRONTEND/src/components/organisms/Main/Main.module.scss
+++ b/FRONTEND/src/components/organisms/Main/Main.module.scss
@@ -2,6 +2,8 @@
   position: relative;
   width: 1440px;
   height: calc(100vh - 100px);
-  margin: 0 auto;
-  background-color: antiquewhite;
+  margin: 7.5px auto;
+  padding: 10px;
+  border-radius: 10px;
+  background-color: rgba(#FFF, 0.1);
 }
