--- a/FRONTEND/src/views/SignInSignUpView/SignInSignUpView.module.scss
+++ b/FRONTEND/src/views/SignInSignUpView/SignInSignUpView.module.scss
@@ -7,10 +7,12 @@
   flex-direction: column;
   align-items: center;
   width: 100%;
-  height: 500px;
+  height: 300px;
   max-width: 500px;
-  background-color: orange;
+  background-color: rgba($color: #fff, $alpha: 0.1);
+  border-radius: 10px;
 }
+
 .form {
   display: flex;
   flex-direction: column;
@@ -26,4 +28,3 @@
   margin: 0 auto;
   border: 1px dashed black;
 }
-
