--- a/FRONTEND/src/views/SingleBookView/SingleBookView.module.scss
+++ b/FRONTEND/src/views/SingleBookView/SingleBookView.module.scss
@@ -23,10 +23,10 @@
 }
 
 .picture {
-position: relative;
-top: 50%;
-left: 50%;
-transform: translate(-50%, -50%);
+  position: relative;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 .title {
@@ -40,6 +40,20 @@ transform: translate(-50%, -50%);
 
 .descriptionBlock {
   margin: 10px;
-  // grid-column: 2;
   grid-column: 1/-1
+}
+
+.btn {
+  width: 100px;
+  margin: 5px 10px;
+  border-radius: 10px;
+  border: 2px solid rgba(#000000, 0.5);
+  background-color: rgba(#555, 0.1);
+  cursor: pointer;
+
+  &:focus,
+  &:hover {
+    border: 2px solid rgba(#000000, 0.8);
+    background-color: rgba(#555, 0.5);
+  }
 }
