Add book charts and improve news display

--- a/FRONTEND/AdminWebsite/src/components/molecules/Article/Article.module.scss
+++ b/FRONTEND/AdminWebsite/src/components/molecules/Article/Article.module.scss
@@ -4,3 +4,12 @@
   background-color: #ddd;
   border-radius: 10px;
 }
+
+.title {
+  text-align: center;
+}
+
+.content {
+  text-indent: 20px; 
+  line-height: 1.25rem;
+}
