--- a/FRONTEND/AdminWebsite/src/views/AdminChartsView/AdminChartsView.module.scss
+++ b/FRONTEND/AdminWebsite/src/views/AdminChartsView/AdminChartsView.module.scss
@@ -5,7 +5,6 @@
   width: 80%;
   height: calc(95%);
   margin: 0 auto;
-  overflow-y: auto;
 }
 
 .internalTable {
@@ -18,4 +17,16 @@
   font-size: 2rem;
   font-weight: 700;
   font-style: italic;
+}
+
+.firstGraphTitle {
+  text-align: center;
+  font-size: 2rem;
+  font-weight: 700;
+  font-style: italic;
+}
+
+.firstGraphwrapper {
+  display: flex;
+  justify-content: center;
 }
