--- a/FRONTEND/AdminWebsite/src/components/organisms/AdminBorrowedBooksList/AdminBorrowedBooksList.module.scss
+++ b/FRONTEND/AdminWebsite/src/components/organisms/AdminBorrowedBooksList/AdminBorrowedBooksList.module.scss
@@ -11,7 +11,8 @@
 .bookItem,
 .bookItemHeader {
   display: grid;
-  grid-template-columns: 0.75fr 0.75fr 1fr 1.5fr 0.5fr;
+  grid-template-columns: 1fr 1.5fr 0.5fr 0.5fr 0.5fr;
+  text-align: center;
 }
 
 .bookItemHeader {
@@ -38,6 +39,7 @@
 
 .btn {
   width: 100px;
+  height: 22px;
   margin: 0 10px;
   border-radius: 10px;
 
