--- a/FRONTEND/AdminWebsite/src/components/organisms/BookItemBorrowedAdmin/BookItemBorrowedAdmin.module.scss
+++ b/FRONTEND/AdminWebsite/src/components/organisms/BookItemBorrowedAdmin/BookItemBorrowedAdmin.module.scss
@@ -1,6 +1,6 @@
 .bookItem {
   display: grid;
-  grid-template-columns: 0.75fr 0.75fr 1fr 1.5fr 0.5fr;
+  grid-template-columns: 1fr 1.5fr 0.5fr 0.5fr 0.5fr;
   padding: 10px 0 10px 10px;
 
   &:nth-of-type(2n-1) {
@@ -26,7 +26,8 @@
 
 .btn {
   width: 100px;
-  margin: 0 10px;
+  height: 22px;
+  margin: 0 auto;
   border-radius: 10px;
   border: 2px solid rgba(#000000, 0.5);
   background-color: rgba(#fff, 1);
