--- a/FRONTEND/AdminWebsite/src/components/organisms/AdminReservedBooksList/AdminReservedBooksList.module.scss
+++ b/FRONTEND/AdminWebsite/src/components/organisms/AdminReservedBooksList/AdminReservedBooksList.module.scss
@@ -11,7 +11,7 @@
 .bookItem,
 .bookItemHeader {
   display: grid;
-  grid-template-columns: 1fr 1.5fr 0.5fr 0.5fr 0.5fr;
+  grid-template-columns: 1fr 1.5fr 0.5fr 0.5fr;
   text-align: center;
 }
 
