--- a/FRONTEND/AdminWebsite/src/components/organisms/BookItemReservedAdmin/BookItemReservedAdmin.module.scss
+++ b/FRONTEND/AdminWebsite/src/components/organisms/BookItemReservedAdmin/BookItemReservedAdmin.module.scss
@@ -1,6 +1,6 @@
 .bookItem {
   display: grid;
-  grid-template-columns: 1fr 1.5fr 0.5fr 0.5fr 0.5fr;
+  grid-template-columns: 1fr 1.5fr 0.5fr 0.5fr;
   padding: 10px 0 10px 10px;
 
   &:nth-of-type(2n-1) {
@@ -26,6 +26,7 @@
 
 .btn {
   width: 100px;
+  height: 22px;
   margin: 0 auto;
   border-radius: 10px;
   border: 2px solid rgba(#000000, 0.5);
