--- a/FRONTEND/UserWebsite/src/App.css
+++ b/FRONTEND/UserWebsite/src/App.css
@@ -21,3 +21,7 @@ select:-webkit-autofill:focus {
   -webkit-box-shadow: 0 0 0px 1000px rgba(#000000, 0.5) inset;
   transition: background-color 5000s ease-in-out 0s;
 }
+
+::-webkit-scrollbar {
+  display: none;
+}
